# RAG-Complete-Guide

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/: settings.py
src/architectures/: fusion_rag.py  hybrid_rag.py
src/components/: embeddings.py  knowledge_storage.py  llm.py  pre_retrieval.py  rerankers.py  reranking.py  similarity.py  text_splitters.py  utils.py
src/datasets/falcon_refined_web/: load_dataset.py
src/datasets/qi_lir_news/: evaluation.csv  ru.txt
src/modules/01_intro/naive_rag/: app.py  eng.txt  readme.md  ru.txt
src/modules/first_rag/: app.py  eval.py  readme.md
src/modules/naive_rag/: app.py  eval.py  readme.md
src/modules/vector_search/bert_embeddings/: fastembed_usage.py  ollama_usage.py  sentence_transformers_usage.py  transformers_usage.py
src/modules/vector_search/canonical_rag/: load.py  readme.md  run.py
src/modules/vector_search/post_retrieval/: fusion_rag_full_pipeline.py
src/modules/vector_search/pre_retrieval/: hyde.py  multi_query_rewriting.py  step_back_prompting.py
src/modules/vector_search/retrieval/: bm25_in_memory.py  bm25_in_qdrant.py  hybrid_search.py  hybrid_search_full_pipeline.py  splade_in_qdrant.py
src/modules/vector_search/text_spliiters_demo/: recursive_split_demo.py  split_by_chars_with_overlap_demo.py  split_by_paragraph_demo.py
src/modules/vector_search/vector_databases/: chroma_advanced_example.py  chroma_example.py  faiss_example.py  faiss_hnsw_example.py  milvus_example.py  milvus_hnsw_example.py  pgvector_example.py  pgvector_hnsw_example.py  qdrant_example.py  qdrant_hnsw_example.py  sqlite_vec_example.py
