[project]
name = "rag-complete-guide"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "asyncclick>=8.3.0.7",
    "click>=8.4.1",
    "datasets>=5.0.0",
    "faiss-cpu>=1.14.3",
    "fastembed>=0.8.0",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "openai>=2.41.0",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.12",
    "pydantic-settings>=2.14.1",
    "ruff>=0.15.16",
    "sqlite-vec>=0.1.9",
]



[tool.ruff]
# Версия Python для проверки совместимости
target-version = "py314"
# Сортировка импортов
src = ["src", "tests"]
# Максимальная длина строки
line-length = 130

[tool.ruff.lint]
# Все правила
select = [
    # Pycodestyle
    "E", "W",
    # Pyflakes
    "F",
    # isort
    "I",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-simplify
    "SIM",
    # flake8-return
    "RET",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
    # flake8-tidy-imports
    "TID",
    # flake8-annotations
    "ANN",
    # flake8-unused-arguments
    "ARG",
    # flake8-errmsg
    "EM",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-type-checking
    "TC",
    # flake8-pytest-style
    "PT",
    # flake8-no-pep420
    "INP",
    # pandas-vet
    "PD",
]
# Игнорируемые правила
ignore = [
    "E501",
    "ANN401",  # any type
    "EM101",   # Exception must not use a string literal
    "EM102",   # Exception must not use an f-string literal
    # Кирилица в комментариях
    "RUF002",
    "UP046",
    "T201",   # print usage
]

# Правила, которые должны быть исправлены автоматически
fixable = ["ALL"]

[tool.ruff.lint.mccabe]
# Максимальная сложность функций
max-complexity = 10

[tool.ruff.lint.pydocstyle]
# Использовать Google-style докстринги
convention = "google"

[tool.ruff.lint.isort]
# Стиль сортировки импортов
known-first-party = ["src"]
known-third-party = ["pydantic", "sqlalchemy", "fastapi"]
lines-after-imports = 2
force-sort-within-sections = true
combine-as-imports = true
